@@ -1,4 +1,4 @@
-EBUILD cldx-meta-10.4.ebuild 3166 RMD160 5eeeb5ba58acb2355dd13e7c86ede4e90f8ef5aa SHA1 6f792bbc7b567b9979e25ff04bbb8bae69ad1fd0 SHA256 d8afd390ff5b2704e30da1da682f3c01719990360728b77156f1db280869970b
-EBUILD cldx-meta-10.8.81.ebuild 1871 RMD160 ce3de0ed445b7f633684b92b86161afd87efafea SHA1 748cfbbd1b4d7add1ec80ee9bb09496879c56b06 SHA256 9480a1deb1182230f849d405396f8caf6ffdcb32ce73f8f6d27961bb24d91334
-MISC ChangeLog 2420 RMD160 14178f1726f2f518c4ee8f4f0872b3ce73692c3f SHA1 7fbcc067fc429dc0154e12d626f714c6650e6f72 SHA256 6caacf42613bebfeeb6f05e151a9e3b9cfaa6188fc5dcf02ceb6508f7304ff4a
+EBUILD cldx-meta-10.4-r1.ebuild 3190 RMD160 2fe8ee33efc82641086b325d987dbdf5dbe2cd06 SHA1 156ec21a6fae4272ee7ea07b160caf476a97ab48 SHA256 ebe7a47a02a28a9ad59c10cd2b4d916a13b5ce9639ec93247d87ba3bb081dbc3
+EBUILD cldx-meta-10.8.81.ebuild 1895 RMD160 e155598af42544a121a686490b3eb673d87e0894 SHA1 76c2d36d35350204406248640428a8276815d412 SHA256 d78dacf3f74e160e3892e66f38a42951cb42af42757f604c4a555f7117fbaf15
+MISC ChangeLog 2602 RMD160 6bdfb7293c3633e0d0062f60fc1c259afcb98f89 SHA1 683ad12a53c28b2e85418387548f9c5b192ba523 SHA256 922480c1b8ad292638b2b37413430b23e4a5aae0b03866595c044ee3ed76da9e
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
