@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldx-meta-10.4-r1 (22 Aug 2010)
+
+  22 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cldx-meta-10.4.ebuild, +cldx-meta-10.4-r1.ebuild:
+  Removed claws-mail-gtkhtml
+
 *cldx-meta-10.8.81 (13 Aug 2010)
 
   13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
